<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <string name="detail_web_sample">www.facebook.fr/caroline</string>
    <string name="detail_phone_sample">+33 6 86 57 90 14</string>
    <string name="detail_adress_sample">Saint pierre du mon à 5km</string>
    <string name="detail_name_sample">Caroline</string>
    <string name="about_me">A propos de moi</string>
    <string name="detail_about_sample">Bonjour! Je souhaiterais faire de la marche nordique. Pas initiée, je recherche une ou plusieurs personnes susceptibles de m\'accompagner! J\'aime les jeux de cartes tels la belote et le tarot..</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="pin">pin</string>
    <string name="phone">phone</string>
    <string name="web">web</string>
    <string name="profile_picture">Profile picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
