<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NeighbourDetailActivity"
    android:background="@color/detail_background">


    <ImageView
        android:id="@+id/neighbour_detail_picture"
        android:layout_width="match_parent"
        android:layout_height="@dimen/neighbour_detail_picture_height"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/detail_picture_sample"
        android:contentDescription="@string/profile_picture" />

    <TextView
        android:id="@+id/neighbour_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/neighbour_detail_name_margin_start"
        android:layout_marginBottom="@dimen/neighbour_detail_name_margin_bottom"
        android:text="@string/detail_name_sample"
        android:textSize="@dimen/neighbour_detail_name_margin_size"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/neighbour_detail_picture"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/neighbour_detail_add_to_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/neighbour_detail_cardview_margin_horizontal"
        android:backgroundTint="@color/fab_background"
        android:clickable="true"
        android:contentDescription="@string/add_to_favorites"
        android:focusable="true"
        android:tint="@color/favorite_yellow"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/neighbour_detail_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neighbour_detail_picture"
        app:srcCompat="@drawable/ic_star_border_white_24dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neighbour_detail_picture" >

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/neighbour_detail_cardview_margin_horizontal"
                android:layout_marginTop="@dimen/neighbour_detail_cardview_margin_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/neighbour_detail_info_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/neighbour_detail_cardview_content_margin_top"
                        android:layout_marginStart="@dimen/neighbour_detail_cardview_content_margin"
                        android:layout_marginBottom="@dimen/neighbour_detail_cardview_content_margin"
                        android:text="@string/detail_name_sample"
                        android:textSize="@dimen/neighbour_detail_cardview_title_size"
                        android:textColor="@color/title_black"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/neighbour_detail_cardview_content_margin"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView
                            android:layout_width="@dimen/neighbour_detail_info_icon_size"
                            android:layout_height="@dimen/neighbour_detail_info_icon_size"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/ic_pin"
                            android:tint="@color/colorAccent"
                            android:contentDescription="@string/pin" />

                        <TextView
                            android:id="@+id/neighbour_detail_info_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/neighbour_detail_info_text_margin_start"
                            android:text="@string/detail_adress_sample"
                            android:textSize="@dimen/neighbour_detail_text_size"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/neighbour_detail_cardview_content_margin"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="@dimen/neighbour_detail_info_icon_size"
                            android:layout_height="@dimen/neighbour_detail_info_icon_size"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/ic_phone"
                            android:tint="@color/colorAccent"
                            android:contentDescription="@string/phone" />

                        <TextView
                            android:id="@+id/neighbour_detail_info_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/neighbour_detail_info_text_margin_start"
                            android:text="@string/detail_phone_sample"
                            android:textSize="@dimen/neighbour_detail_text_size"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/neighbour_detail_cardview_content_margin"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="@dimen/neighbour_detail_info_icon_size"
                            android:layout_height="@dimen/neighbour_detail_info_icon_size"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/ic_web"
                            android:tint="@color/colorAccent"
                            android:contentDescription="@string/web" />

                        <TextView
                            android:id="@+id/neighbour_detail_info_web"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/neighbour_detail_info_text_margin_start"
                            android:text="@string/detail_web_sample"
                            android:textSize="@dimen/neighbour_detail_text_size"/>
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/neighbour_detail_cardview_margin_horizontal"
                android:layout_marginVertical="@dimen/neighbour_detail_cardview_margin_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/neighbour_detail_about_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/neighbour_detail_cardview_content_margin_top"
                        android:layout_marginStart="@dimen/neighbour_detail_cardview_content_margin"
                        android:layout_marginBottom="@dimen/neighbour_detail_cardview_content_margin"
                        android:text="@string/about_me"
                        android:textSize="@dimen/neighbour_detail_cardview_title_size"
                        android:textColor="@color/title_black"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider"/>

                    <TextView
                        android:id="@+id/neighbour_detail_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/neighbour_detail_cardview_content_margin"
                        android:layout_marginBottom="@dimen/neighbour_detail_cardview_content_margin"
                        android:layout_marginEnd="@dimen/neighbour_detail_cardview_content_margin"
                        android:layout_marginTop="@dimen/neighbour_detail_cardview_content_margin_top"
                        android:text="@string/detail_about_sample"
                        android:textSize="@dimen/neighbour_detail_text_size"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>