...
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/favorite_item_list_container">


    <ImageView
        android:id="@+id/favorite_item_list_avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
...
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/favorite_item_list_avatar"
        app:layout_constraintStart_toEndOf="@+id/favorite_item_list_avatar"
        app:layout_constraintTop_toTopOf="@+id/favorite_item_list_avatar" />

    <ImageButton
        android:id="@+id/favorite_item_list_remove_favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/favorite_item_list_name"
        app:layout_constraintEnd_toEndOf="parent"
...
